kubernetes/apps/default/misc-ingress/app/ingress-external-ai.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: openai.png
    gethomepage.dev/name: LocalAI
    gethomepage.dev/group: AI
    gethomepage.dev/description: Local AI
spec:
  ingressClassName: external
  rules:
    - host: &host "ai.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai
                port:
                  number: 8082
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ai
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 8082
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ai
spec:
  ports:
    - name: http
      port: 8082
  type: ClusterIP
